crates/test-files/fixtures/compile_errors/bad_ingot/src/bing.fe
use std

struct Bong:
    pass